--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.0.0",
     "react-is": "^16.8.0",
     "react-native": "0.79.6",
+    "react-native-google-mobile-ads": "^15.7.0",
     "react-native-linear-gradient": "*",
     "react-native-mmkv": "*",
     "react-native-paper": "4.9.2",
@@ -33,12 +34,14 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "*",
-    "sync-storage": "*"
+    "sync-storage": "*",
+    "expo-updates": "~0.28.17",
+    "expo-font": "~13.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
