--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,7 @@
       "ios": {
         "resourceClass": "m-medium"
       },
+"android": { "buildType": "app-bundle" },
       "autoIncrement": true
     },
     "production": {
@@ -33,12 +34,20 @@
   "submit": {
     "preview": {
       "ios": {
-        "ascAppId": "6752318405"
-      }
+        "ascAppId": "6753036580",
+	"ascApiKeyId": "Z66KHJRNR2",
+        "ascApiKeyIssuerId": "69a6de75-8cda-47e3-e053-5b8c7c11a4d1",
+        "ascApiKeyPath": " ../AuthKey_Z66KHJRNR2.p8"
+      },
+"android": { "track": "internal", "releaseStatus": "draft" } 
     },
     "production": {
       "ios": {
-        "ascAppId": "6752318405"
+        "ascAppId": "6753036580",
+	"ascApiKeyId": "Z66KHJRNR2",
+        "ascApiKeyIssuerId": "69a6de75-8cda-47e3-e053-5b8c7c11a4d1",
+        "ascApiKeyPath": "../AuthKey_Z66KHJRNR2.p8"
+
       }
     }
   }
