--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-secure-store": "~14.2.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "react": "19.0.0",
     "react-is": "^16.8.0",
     "react-native": "0.79.6",
@@ -30,13 +33,13 @@
     "react-native-linear-gradient": "*",
     "react-native-mmkv": "*",
     "react-native-paper": "4.9.2",
+    "react-native-purchases": "^9.5.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "*",
-    "sync-storage": "*",
-    "expo-updates": "~0.28.17",
-    "expo-font": "~13.3.2"
+    "react-native-view-shot": "^4.0.3",
+    "sync-storage": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
