--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@fortawesome/free-solid-svg-icons": "*",
+    "@intergi/react-native-playwire-sdk": "^11.5.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "11.5.0",
     "@react-native-picker/picker": "2.11.1",
