--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@fortawesome/free-solid-svg-icons": "*",
-    "@intergi/react-native-playwire-sdk": "^11.5.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+        "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "11.5.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.0.0",
@@ -30,7 +29,6 @@
     "react": "19.0.0",
     "react-is": "^16.8.0",
     "react-native": "0.79.6",
-    "react-native-google-mobile-ads": "^15.7.0",
     "react-native-linear-gradient": "*",
     "react-native-mmkv": "*",
     "react-native-paper": "4.9.2",
@@ -40,7 +38,8 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "*",
     "react-native-view-shot": "^4.0.3",
-    "sync-storage": "*"
+    "sync-storage": "*",
+    "expo-tracking-transparency": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
