--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@fortawesome/free-solid-svg-icons": "*",
+    "@intergi/react-native-playwire-sdk": "^11.6.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-firebase/app": "11.5.0",
+    "@react-native-firebase/app": "^21.14.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.0.0",
     "@react-navigation/native": "^6.1.18",
-    "expo": "~53.0.22",
+    "expo": "~53.0.23",
     "expo-application": "~6.1.5",
+    "expo-asset": "~11.1.7",
+    "expo-build-properties": "~0.14.8",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
@@ -25,12 +29,14 @@
     "expo-secure-store": "~14.2.4",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-tracking-transparency": "~5.2.4",
     "expo-updates": "~0.28.17",
     "react": "19.0.0",
     "react-is": "^16.8.0",
     "react-native": "0.79.6",
     "react-native-linear-gradient": "*",
     "react-native-mmkv": "*",
+    "react-native-nitro-modules": "^0.31.6",
     "react-native-paper": "4.9.2",
     "react-native-purchases": "^9.5.4",
     "react-native-safe-area-context": "5.4.0",
@@ -38,14 +44,14 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "*",
     "react-native-view-shot": "^4.0.3",
-    "sync-storage": "*",
-    "expo-tracking-transparency": "~5.2.4",
-    "expo-clipboard": "~7.1.5"
+    "sync-storage": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "name": "LiveFPL App",
+  "version": "1.0.0"
 }
