--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     },
     "name": "LiveFPL",
     "slug": "snack-ff015f15-372f-48a4-a54d-e0dc668b6d1b",
-    "version": "1.1.2",
-"runtimeVersion": "1.1.2",
+    "version": "1.1.4",
+"runtimeVersion": "1.1.4",
     "orientation": "portrait",
     "icon": "./icon.png",
     "android": {
@@ -31,6 +31,7 @@
       "bundleIdentifier": "com.pocketgamerguides.livefpl",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
+	"GADApplicationIdentifier": "ca-app-pub-6531503260671471~4892993394",
         "NSUserTrackingUsageDescription": "This identifier is used to show you relevant, less intrusive ads and to measure ad performance."
       }
     },
