added android subs

--- a/eas.json
+++ b/eas.json
@@ -28,6 +28,9 @@
       "ios": {
         "resourceClass": "m-medium"
       },
+      "android": {
+        "buildType": "app-bundle"
+      },
       "autoIncrement": true
     }
   },
