--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-secure-store": "~14.2.4",
