--- a/app.json
+++ b/app.json
@@ -8,12 +8,13 @@
     },
     "name": "LiveFPL",
     "slug": "snack-ff015f15-372f-48a4-a54d-e0dc668b6d1b",
-    "version": "1.5.0",
-"runtimeVersion": "1.5.0",
+    "version": "1.6.0",
+"runtimeVersion": "1.6.0",
     "orientation": "portrait",
     "icon": "./icon.png",
     "android": {
       "package": "com.pocketgamerguides.livefpl",
+      "googleServicesFile": "./google-services.json",
       "versionCode": 3,
       "adaptiveIcon": {
         "foregroundImage": "./adaptive-foreground-1024.png",
@@ -29,6 +30,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.pocketgamerguides.livefpl",
+      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
 	"GADIsAdManagerApp": true,
         "ITSAppUsesNonExemptEncryption": false,
