--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@intergi/react-native-playwire-sdk": "^11.6.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/messaging": "^21.14.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.0.0",
     "@react-navigation/native": "^6.1.18",
