Upgrade RNFirebase to 22

--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
       }
     },
     "userInterfaceStyle": "light",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "splash": {
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
